--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{ "homepage": "https://github.com/Verenasworld/webinterface",
   "name": "webinterface",
   "version": "0.1.0",
   "private": true,
@@ -19,6 +19,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy" :"npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
